Closed Bug 1385656 Opened 8 years ago Closed 8 years ago

stylo: RecoverLetterFrames doesn't play nicely with ::first-line

Categories

(Core :: CSS Parsing and Computation, defect, P3)

53 Branch
defect

Tracking

()

RESOLVED FIXED
mozilla57
Tracking Status
firefox57 --- fixed

People

(Reporter: bzbarsky, Assigned: bzbarsky)

References

Details

Attachments

(1 file)

Something I just realized about the patches from bug 1324619: they don't handle the case when a ::first-letter is created directly inside a ::first-line instead of being wrapped in it. This happens in RecoverLetterFrames. Simple testcase: <style> div { border: 5px solid transparent; } div::first-line { } div::first-letter { border: inherit; border-color: yellow; } </style> <div onclick="this.appendChild(document.createTextNode('Does the first letter still have a border?'))"> Click me. </div>
Depends on: 1324619
Flags: needinfo?(bzbarsky)
Priority: -- → P3
Blocks: 1388877
Flags: needinfo?(bzbarsky)
Attachment #8896036 - Flags: review?(emilio+bugs) → review?(cam)
Comment on attachment 8896036 [details] Bug 1385656. Fix the interaction of RecoverLetterFrames and ::first-line. https://reviewboard.mozilla.org/r/167308/#review172614 (Stealing per bz's request.)
Attachment #8896036 - Flags: review?(cam) → review+
Pushed by bzbarsky@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/63ebcdc4d3ab Fix the interaction of RecoverLetterFrames and ::first-line. r=heycam
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla57
Depends on: 1398581
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: