Bug 1385656.  Fix the interaction of RecoverLetterFrames and ::first-line.  r=heycam

MozReview-Commit-ID: BUt5FDI0IV1